# CHIP-8

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: cgltf.h.B5515BE3FD8DAB85.idx  chip8.cpp.EE569A0179ADEDF5.idx  chip8.h.75DC2A69592E728D.idx  config.h.93BE202679BA08C1.idx  context.c.9A430DBBCDCE030C.idx  dr_mp3.h.EF41D2401650BDAB.idx  dr_wav.h.5143C90D4C96E683.idx  egl_context.c.F20B51FBB5F0EFB2.idx  glad.h.94C7272EA54C40E6.idx  glfw3.h.AF9D18A5F78BED9E.idx  glfw3native.h.3659B26ABE2ED94A.idx  glx_context.c.5E43DF02A5B91125.idx  init.c.2D08EC7599C38B4B.idx  input.c.C55C5E7727844453.idx  internal.h.3F6221C62AB793BC.idx  jar_mod.h.515DEBF713F8CA5A.idx  jar_xm.h.D5D594D32A2ECB53.idx  linux_joystick.c.27531095D3E47547.idx  linux_joystick.h.D75A66AF75B0DC7D.idx  m3d.h.32E5923B00D8AD84.idx  main.cpp.FD732627D1530EBD.idx  mappings.h.DA8D47B7BF07EBCB.idx  miniaudio.h.A018302F6811B67F.idx  monitor.c.20F69CB60143081A.idx  msf_gif.h.07128ECCB032A4AE.idx  null_init.c.DB1B2B80649C6FBD.idx  null_joystick.c.7B5188B0D997FAD1.idx  null_joystick.h.16B1A88E3691A9E7.idx  null_monitor.c.5625D064528CF4CB.idx  null_platform.h.97D2198200192E90.idx  null_window.c.2F5974D6C2EB416E.idx  osmesa_context.c.4AA341FA5434416A.idx  par_shapes.h.817859B34387F6E3.idx  platform.c.B76789E9CCB36D09.idx  platform.h.8D624632CABA9E0B.idx  posix_module.c.C443737CB44B014B.idx  posix_poll.c.FECCEC172AFBA782.idx  posix_poll.h.FAA7CFE22446C3E2.idx  posix_thread.c.340BDDD539F99285.idx  posix_thread.h.B7FCB2C1B8B43526.idx  (+40 more)
src/: chip8.cpp  chip8.h  main.cpp
